syntax = "proto3";
option java_multiple_files = true;
package com.example.codehive_auth;

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);

    rpc Login(LoginRequest) returns (LoginResponse);

    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}


message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string token = 1;
    string status = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string status = 2;
}

message VerifyTokenRequest {
    string token = 1;
    string uid = 2;
}

message VerifyTokenResponse {
    string status = 1;
}
